--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "audit": "0.0.6",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.1",
     "crypto-js": "^4.0.0",
+    "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
